@@ -670,33 +670,7 @@ name|ZkWriteCommand
 name|cmd
 parameter_list|)
 block|{
-if|if
-condition|(
-name|lastUpdatedTime
-operator|==
-literal|0
-condition|)
-block|{
-comment|// first update, make sure we go through
 return|return
-literal|false
-return|;
-block|}
-if|if
-condition|(
-name|cmd
-operator|.
-name|collection
-operator|==
-literal|null
-condition|)
-block|{
-return|return
-literal|false
-return|;
-block|}
-if|if
-condition|(
 name|cmd
 operator|.
 name|collection
@@ -705,31 +679,6 @@ name|getStateFormat
 argument_list|()
 operator|!=
 name|lastStateFormat
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-return|return
-name|cmd
-operator|.
-name|collection
-operator|.
-name|getStateFormat
-argument_list|()
-operator|>
-literal|1
-operator|&&
-operator|!
-name|cmd
-operator|.
-name|name
-operator|.
-name|equals
-argument_list|(
-name|lastCollectionName
-argument_list|)
 return|;
 block|}
 comment|/**    * Logic to decide a flush after processing a ZkWriteCommand    *    * @param cmd the ZkWriteCommand instance    * @return true if a flush to ZK is required, false otherwise    */
@@ -777,6 +726,15 @@ operator|-
 name|lastUpdatedTime
 operator|>
 name|MAX_FLUSH_INTERVAL
+operator|||
+name|updates
+operator|.
+name|size
+argument_list|()
+operator|>
+name|Overseer
+operator|.
+name|STATE_UPDATE_BATCH_SIZE
 return|;
 block|}
 DECL|method|hasPendingUpdates
